--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <!-- Security Policy -->
     <meta http-equiv="Content-Security-Policy" content="
         default-src 'self';
-        script-src 'self' 'unsafe-inline' https: 'unsafe-eval';
+        script-src 'self' 'unsafe-inline' https: https://maps.googleapis.com 'unsafe-eval';
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
         font-src 'self' data: https://fonts.gstatic.com;
-        img-src 'self' data: https:;
+        img-src 'self' data: https: https://maps.googleapis.com https://maps.gstatic.com;
         frame-src 'self' https://www.google.com https://www.youtube.com;
-        connect-src 'self' https:;
+        connect-src 'self' https: https://maps.googleapis.com;
         worker-src 'self';
     ">
 
