fix: correct speaker image paths in index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="speaker-profile">
                         <div class="speaker-image">
-                            <img src="assets/img/speakers/Mohamed-Shukri.jpg" class="img-fluid" alt="Mohamed Shukri">
+                            <img src="assets/img/speakers/Mohamemd-Shukri.jpg" class="img-fluid" alt="Mohamed Shukri">
                             <div class="speaker-social">
                                 <a href="#"><i class="bi bi-linkedin"></i></a>
                                 <a href="#"><i class="bi bi-twitter"></i></a>
@@ -186,7 +186,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="speaker-profile">
                         <div class="speaker-image">
-                            <img src="assets/img/speakers/mohamed-isa.jpg" class="img-fluid" alt="Mohamed Isa">
+                            <img src="assets/img/speakers/mO" class="img-fluid" alt="Mohamed Isa">
                             <div class="speaker-social">
                                 <a href="#"><i class="bi bi-linkedin"></i></a>
                                 <a href="#"><i class="bi bi-twitter"></i></a>
