fix: comment out unused social media links in speaker profiles

--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
                         <div class="speaker-image">
                             <img src="assets/img/speakers/Suhail-Algosaibi.jpg" class="img-fluid"
                                  alt="Suhail Bin Ghazi Al Gosaibi">
-                            <div class="speaker-social">
-                                <a href="#"><i class="bi bi-linkedin"></i></a>
-                                <a href="#"><i class="bi bi-twitter"></i></a>
-                            </div>
+<!--                            <div class="speaker-social">-->
+<!--                                <a href="#"><i class="bi bi-linkedin"></i></a>-->
+<!--                                <a href="#"><i class="bi bi-twitter"></i></a>-->
+<!--                            </div>-->
                         </div>
                         <div class="speaker-info">
                             <span class="speaker-role">Featured Speaker</span>
@@ -197,10 +197,10 @@
                     <div class="speaker-profile">
                         <div class="speaker-image">
                             <img src="assets/img/speakers/Mohamed-Shukri.jpg" class="img-fluid" alt="Mohamed Shukri">
-                            <div class="speaker-social">
-                                <a href="#"><i class="bi bi-linkedin"></i></a>
-                                <a href="#"><i class="bi bi-twitter"></i></a>
-                            </div>
+<!--                            <div class="speaker-social">-->
+<!--                                <a href="#"><i class="bi bi-linkedin"></i></a>-->
+<!--                                <a href="#"><i class="bi bi-twitter"></i></a>-->
+<!--                            </div>-->
                         </div>
                         <div class="speaker-info">
                             <span class="speaker-role">Keynote Speaker</span>
@@ -223,10 +223,10 @@
                     <div class="speaker-profile">
                         <div class="speaker-image">
                             <img src="assets/img/speakers/Mohamed-Isa.jpg" class="img-fluid" alt="Mohamed Isa">
-                            <div class="speaker-social">
-                                <a href="#"><i class="bi bi-linkedin"></i></a>
-                                <a href="#"><i class="bi bi-twitter"></i></a>
-                            </div>
+<!--                            <div class="speaker-social">-->
+<!--                                <a href="#"><i class="bi bi-linkedin"></i></a>-->
+<!--                                <a href="#"><i class="bi bi-twitter"></i></a>-->
+<!--                            </div>-->
                         </div>
                         <div class="speaker-info">
                             <span class="speaker-role">Keynote Speaker</span>
