fix: translate speaker topic to English

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             </div>
                             <div class="speaker-topic mt-3">
                                 <i class="bi bi-quote"></i>
-                                <p>كيف تصبح الخطيب الأول في العالم؟</p>
+                                <p>How to become the world's number one speaker?</p>
                             </div>
                         </div>
                     </div>
