feat: enhance speaker section layout, add new speaker, and improve contact section design

--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@
 
             </div> <!-- End of first row of speakers -->
 
+            <!-- Second row of speakers - Modified to fit 5 speakers in one row -->
             <div class="row gy-4 mt-4"> <!-- Second row of speakers, mt-4 for some space -->
 
-                <!-- Speaker 5: Dr. Osama Bahar (New) -->
-                <div class="col-xl-3 col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                <!-- Speaker 5: Dr. Osama Bahar -->
+                <div class="col-lg-1-5 col-md-6" data-aos="fade-up" data-aos-delay="100">
                     <div class="speaker-profile">
                         <div class="speaker-image">
                             <img src="assets/img/speakers/Osama-Bahar.jpg" class="img-fluid" alt="Dr. Osama Bahar">
-                            <!-- UPDATE IMAGE PATH -->
                             <div class="speaker-social">
                                 <!-- Add social links if available -->
                             </div>
@@ -289,12 +289,11 @@
                     </div>
                 </div>
 
-                <!-- Speaker 6: Kamal Al Shehabi (New) -->
-                <div class="col-xl-3 col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
+                <!-- Speaker 6: Kamal Al Shehabi -->
+                <div class="col-lg-1-5 col-md-6" data-aos="fade-up" data-aos-delay="200">
                     <div class="speaker-profile">
                         <div class="speaker-image">
                             <img src="assets/img/speakers/Kamal-AlShehabi.jpg" class="img-fluid" alt="Kamal Al Shehabi">
-                            <!-- UPDATE IMAGE PATH -->
                             <div class="speaker-social">
                                 <!-- Add social links if available -->
                             </div>
@@ -311,12 +310,11 @@
                     </div>
                 </div>
 
-                <!-- Speaker 7: Neena Wilson (New) -->
-                <div class="col-xl-3 col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
+                <!-- Speaker 7: Neena Wilson -->
+                <div class="col-lg-1-5 col-md-6" data-aos="fade-up" data-aos-delay="300">
                     <div class="speaker-profile">
                         <div class="speaker-image">
                             <img src="assets/img/speakers/Neena-Wilson.jpg" class="img-fluid" alt="Neena Wilson">
-                            <!-- UPDATE IMAGE PATH -->
                             <div class="speaker-social">
                                 <!-- Add social links if available -->
                             </div>
@@ -334,12 +332,11 @@
                     </div>
                 </div>
 
-                <!-- Speaker 8: Khurram Salman (New) -->
-                <div class="col-xl-3 col-lg-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
+                <!-- Speaker 8: Khurram Salman -->
+                <div class="col-lg-1-5 col-md-6" data-aos="fade-up" data-aos-delay="400">
                     <div class="speaker-profile">
                         <div class="speaker-image">
                             <img src="assets/img/speakers/Khurram-Salman.jpg" class="img-fluid" alt="Khurram Salman">
-                            <!-- UPDATE IMAGE PATH -->
                             <div class="speaker-social">
                                 <!-- Add social links if available -->
                             </div>
@@ -351,6 +348,27 @@
                             <div class="speaker-topic">
                                 <i class="bi bi-quote"></i>
                                 <p>Personal Branding with LinkedIn</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- NEW Speaker 9: Sheikha Al Shaiba -->
+                <div class="col-lg-1-5 col-md-6" data-aos="fade-up" data-aos-delay="500">
+                    <div class="speaker-profile">
+                        <div class="speaker-image">
+                            <img src="assets/img/speakers/Sheikha-Al-Shaiba.jpg" class="img-fluid" alt="Sheikha Al Shaiba">
+                            <div class="speaker-social">
+                                <!-- Add social links if available -->
+                            </div>
+                        </div>
+                        <div class="speaker-info">
+                            <span class="speaker-role">Featured Speaker</span>
+                            <h4>Sheikha Al Shaiba</h4>
+                            <p class="speaker-position">السيدة شيخة الشيبة</p>
+                            <div class="speaker-topic">
+                                <i class="bi bi-quote"></i>
+                                <p>The Power of Resilience</p>
                             </div>
                         </div>
                     </div>
@@ -1208,7 +1226,8 @@
     </section>
 
     <!-- Contest Roles Section -->
-    <section id="contest-roles" class="section dark-background">
+    <!-- Updated Conference Roles Section with Gray Background -->
+    <section id="contest-roles" class="section light-background gray-background" data-aos="fade-up">
         <div class="container section-title" data-aos="fade-up">
             <h2>Conference Roles</h2>
             <p>Join the English Education Committee and help make DTAC 2025 a success!</p>
@@ -1218,7 +1237,7 @@
             <div class="row gy-4">
                 <div class="col-lg-6" data-aos="fade-up">
                     <div class="info-item d-flex flex-column align-items-center">
-                        <i class="bi bi-calendar-check fs-1"></i>
+                        <i class="bi bi-calendar-check fs-1 text-accent"></i>
                         <h3>Important Dates</h3>
                         <div class="text-center">
                             <p><strong>Nomination Deadline:</strong> March 10, 2025</p>
@@ -1233,9 +1252,9 @@
                         <p class="text-center">Step up, make connections, and contribute to an unforgettable event.</p>
                     </div>
                 </div>
-                <div class="text-center" data-aos="fade-up" data-aos-delay="400">
+                <div class="text-center mt-4" data-aos="fade-up" data-aos-delay="400">
                     <a href="contest-roles.html"
-                       class="buy-btn"
+                       class="contest-roles-btn"
                        rel="noopener noreferrer">
                         Apply Now
                     </a>
@@ -1243,35 +1262,116 @@
             </div>
         </div>
     </section>
-
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
+    <!-- Enhanced Contact Section -->
+    <section id="contact" class="contact section dark-background">
         <div class="container section-title" data-aos="fade-up">
             <h2>Contact Us</h2>
-            <p>Get in touch with our organizing team</p>
+            <p>Get in touch with our organizing team for any inquiries about DTAC 2025</p>
         </div>
 
         <div class="container" data-aos="fade-up" data-aos-delay="100">
-            <div class="row gy-4">
-                <div class="col-lg-4">
-                    <div class="info-item d-flex flex-column align-items-center">
-                        <i class="bi bi-geo-alt fs-1"></i>
-                        <h3>Address</h3>
-                        <p>Crowne Plaza Manama<br>Kingdom of Bahrain</p>
+            <div class="row gy-4 justify-content-center">
+                <!-- Main Contact Card -->
+                <div class="col-lg-8">
+                    <div class="contact-card p-4">
+                        <div class="row g-0">
+                            <div class="col-md-6 mb-4 mb-md-0">
+                                <div class="d-flex align-items-start mb-4">
+                                    <div class="contact-icon-box me-3">
+                                        <i class="bi bi-geo-alt"></i>
+                                    </div>
+                                    <div>
+                                        <h4>Venue Location</h4>
+                                        <p>Crowne Plaza Conference Center<br>
+                                            King Faisal Highway<br>
+                                            Manama, Kingdom of Bahrain</p>
+                                        <a href="https://maps.app.goo.gl/qT9t3SJHvQQBUFSLA" target="_blank" class="btn-link">
+                                            <i class="bi bi-map"></i> View on Map
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-6">
+                                <div class="d-flex align-items-start mb-4">
+                                    <div class="contact-icon-box me-3">
+                                        <i class="bi bi-telephone"></i>
+                                    </div>
+                                    <div>
+                                        <h4>Call Us</h4>
+                                        <p>Our team is available to answer your queries</p>
+                                        <a href="tel:+97337776690" class="btn-link">
+                                            <i class="bi bi-telephone-outbound"></i> +973 3777 6690
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="d-flex align-items-start">
+                                    <div class="contact-icon-box me-3">
+                                        <i class="bi bi-envelope"></i>
+                                    </div>
+                                    <div>
+                                        <h4>Email Us</h4>
+                                        <p>For registration and general inquiries</p>
+                                        <a href="mailto:reg.dtac2025@gmail.com" class="btn-link">
+                                            <i class="bi bi-envelope-paper"></i> reg.dtac2025@gmail.com
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <!-- Social Media Card -->
                 <div class="col-lg-4">
-                    <div class="info-item d-flex flex-column align-items-center">
-                        <i class="bi bi-telephone fs-1"></i>
-                        <h3>Phone</h3>
-                        <p>+973 3777 6690</p>
+                    <div class="contact-card p-4 h-100">
+                        <div class="text-center mb-4">
+                            <div class="contact-icon-box mx-auto mb-3">
+                                <i class="bi bi-share"></i>
+                            </div>
+                            <h4>Connect With Us</h4>
+                            <p>Follow us on social media for updates and announcements</p>
+                        </div>
+
+                        <div class="social-links-lg text-center">
+                            <a href="https://www.facebook.com/DTAC2025.Bahrain" class="facebook" title="Facebook">
+                                <i class="bi bi-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/dtac2025.bahrain/" class="instagram" title="Instagram">
+                                <i class="bi bi-instagram"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/company/dtac2025" class="linkedin" title="LinkedIn">
+                                <i class="bi bi-linkedin"></i>
+                            </a>
+                        </div>
+
+                        <div class="text-center mt-4">
+                        <span class="badge response-badge">
+                            <i class="bi bi-clock"></i> Typical response time: Within 24 hours
+                        </span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="info-item d-flex flex-column align-items-center">
-                        <i class="bi bi-envelope fs-1"></i>
-                        <h3>Email</h3>
-                        <p>reg.dtac2025@gmail.com</p>
+            </div>
+
+            <!-- Quick Links Row -->
+            <div class="row mt-5" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-12 text-center">
+                    <div class="quick-links">
+                        <a href="#buy-tickets" class="quick-link-btn">
+                            <i class="bi bi-ticket-perforated"></i> Registration
+                        </a>
+                        <a href="#venue" class="quick-link-btn">
+                            <i class="bi bi-building"></i> Venue Details
+                        </a>
+                        <a href="#schedule" class="quick-link-btn">
+                            <i class="bi bi-calendar-event"></i> Event Schedule
+                        </a>
+                        <a href="#speakers" class="quick-link-btn">
+                            <i class="bi bi-person-badge"></i> Speakers
+                        </a>
                     </div>
                 </div>
             </div>
