--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <img src="assets/img/banner.jpg" alt="Conference Banner" data-aos="fade-in" loading="eager"
              decoding="sync">
 
-        <div class="container d-flex flex-column align-items-center text-center mt-auto">
+        w<div class="container d-flex flex-column align-items-center text-center mt-auto">
             <h2 data-aos="fade-up" data-aos-delay="100">
                 <span class="en-content">District 20 Toastmasters Annual Conference<br>
                 <span>ECHOES OF EXCELLENCE</span></span>
