feat: add Arabic translations for conference details in index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
             <div class="container position-relative" data-aos="fade-up">
                 <div class="row">
                     <div class="col-lg-8">
-                        <h2 data-i18n="about-conference">About The DTAC 2025 Conference</h2>
+                        <h2 data-i18n="about-conference">
+                            <span class="en-content">About The DTAC 2025 Conference</span>
+                            <span class="ar-content">حول مؤتمر DTAC 2025</span>
+                        </h2>
                         <p data-i18n="conference-description">
                             <span class="en-content">The DTAC 2025 Conference is a celebration of public speaking excellence, where
                             participants showcase their oratory skills and leadership potential. The event brings
@@ -175,14 +178,20 @@
                         </p>
                     </div>
                     <div class="col-lg-2">
-                        <h3 style="text-transform: unset" data-i18n="where">Where</h3>
+                        <h3 style="text-transform: unset" data-i18n="where">
+                            <span class="en-content">Where</span>
+                            <span class="ar-content">أين</span>
+                        </h3>
                         <p>
                             <span class="en-content">Kingdom of Bahrain</span>
                             <span class="ar-content">مملكة البحرين</span>
                         </p>
                     </div>
                     <div class="col-lg-2">
-                        <h3 style="text-transform: unset" data-i18n="when">When</h3>
+                        <h3 style="text-transform: unset" data-i18n="when">
+                            <span class="en-content">When</span>
+                            <span class="ar-content">متى</span>
+                        </h3>
                         <p>
                             <span class="en-content">Thursday to Saturday<br>22-24 May</span>
                             <span class="ar-content">الخميس إلى السبت<br>22-24 مايو</span>
