feat: add patronage information section with Arabic translations and responsive styling

--- a/index.html
+++ b/index.html
@@ -155,11 +155,24 @@
              decoding="sync">
 
         <div class="container d-flex flex-column align-items-center text-center mt-auto">
+            <div class="patronage-info mb-3" data-aos="fade-up">
+                <h3 class="patronage-title">
+                    <span class="en-content">Under Patronage of</span>
+                    <span class="ar-content">تحت رعاية</span>
+                </h3>
+                <h4 class="patronage-name">
+                    <span class="en-content">His Highness Shaikh Isa bin Salman bin Hamad Al Khalifa</span>
+                    <span class="ar-content">سمو الشيخ عيسى بن سلمان بن حمد آل خليفة</span>
+                </h4>
+                <p class="patronage-description">
+                    <span class="en-content">Chairman of the Board of Trustees of the Isa bin Salman Education Charitable Trust<br>and Chairman of the Board of Directors of the Labour Fund (Tamkeen)</span>
+                    <span class="ar-content">رئيس مجلس أمناء وقف عيسى بن سلمان التعليمي الخيري<br>ورئيس مجلس إدارة صندوق العمل</span>
+                </p>
+            </div>
+
             <h2 data-aos="fade-up" data-aos-delay="100">
-                <span class="en-content">District 20 Toastmasters Annual Conference<br>
-                <span>ECHOES OF EXCELLENCE</span></span>
-                <span class="ar-content">مؤتمر التوستماسترز السنوي للمنطقة 20<br>
-                <span>صدى التميز</span></span>
+                <span class="en-content">District 20 Toastmasters Annual Conference<br><span>ECHOES OF EXCELLENCE</span></span>
+                <span class="ar-content">مؤتمر التوستماسترز السنوي للمنطقة 20<br><span>صدى التميز</span></span>
             </h2>
             <p data-aos="fade-up" data-aos-delay="200">
                 <span class="en-content">22-24 May at the Crowne Plaza Conference Center, Kingdom of Bahrain</span>
