feat: update patronage description for improved clarity in English and Arabic

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                     <span class="ar-content">سمو الشيخ عيسى بن سلمان بن حمد آل خليفة</span>
                 </h4>
                 <p class="patronage-description">
-                    <span class="en-content">Chairman of the Board of Trustees of the Isa bin Salman Education Charitable Trust<br>and Chairman of the Board of Directors of the Labour Fund (Tamkeen)</span>
-                    <span class="ar-content">رئيس مجلس أمناء وقف عيسى بن سلمان التعليمي الخيري<br>ورئيس مجلس إدارة صندوق العمل</span>
+                    <span class="en-content">Chairman of the Board of Trustees of the Isa bin Salman Education Charitable Trust<br>Chairman of the Board of Directors of the Labour Fund (Tamkeen)</span>
+                    <span class="ar-content">رئيس مجلس أمناء وقف عيسى بن سلمان التعليمي الخيري<br>رئيس مجلس إدارة صندوق العمل</span>
                 </p>
             </div>
 
